feat(bots): 增加月度账单总结功能并优化相关命令
- 新增 LAST_MONTH_SUMMARY 和 THIS_MONTH_SUMMARY命令用于月度账单总结
- 优化 BillCommand 中的账单计算和消息模板生成逻辑
- 在 CategoryCommand 中添加设置默认分类的功能
- 更新 SystemCommand 中的帮助信息
- 在 Category 实体中添加 isDefault 字段用于标记默认分类
- 优化 Command 枚举，增加 show 字段控制命令是否显示